Add SQLite curriculum runtime and UI import