@@ -21,184 +21,210 @@ class CurriculumExcelImporterTest {
 	@TempDir
 	Path tempDirectory;
 
-	private void createNormalisedSheetContent(Sheet sheet, String descriptor) {
-		Row header = sheet.createRow(0);
-		header.createCell(0).setCellValue("Unit");
-		header.createCell(1).setCellValue("Topic");
-		header.createCell(2).setCellValue("Subtopic");
-		header.createCell(3).setCellValue("Classification");
-		header.createCell(4).setCellValue("Descriptor");
+	private void addHeader(Sheet sheet) {
 
-		Row data = sheet.createRow(1);
-		data.createCell(0).setCellValue("Unit 3");
-		data.createCell(1).setCellValue("Topic 1");
-		data.createCell(2).setCellValue("Chemical equilibrium");
-		data.createCell(3).setCellValue("3.1.1");
-		data.createCell(4).setCellValue(descriptor);
+		Row header = sheet.createRow(0);
+
+		header.createCell(0).setCellValue("Code");
+
+		header.createCell(1).setCellValue("Content");
+	}
+
+	private void addRow(Sheet sheet, int rowIndex, String code, String content) {
+
+		Row row = sheet.createRow(rowIndex);
+
+		row.createCell(0).setCellValue(code);
+
+		row.createCell(1).setCellValue(content);
 	}
 
 	private void writeWorkbook(Workbook workbook, Path file) throws IOException {
+
 		try (OutputStream outputStream = Files.newOutputStream(file)) {
+
 			workbook.write(outputStream);
 		}
 	}
 
 	@Test
-	void doesNotCarrySubtopicIntoNewTopic() throws IOException {
-		Path file = tempDirectory.resolve("stale-hierarchy.xlsx");
+	void ignoresBlankRows() throws IOException {
+
+		Path file = tempDirectory.resolve("blank-rows.xlsx");
 
 		try (Workbook workbook = new XSSFWorkbook()) {
 			Sheet sheet = workbook.createSheet("Curriculum");
 
-			Row header = sheet.createRow(0);
-			header.createCell(0).setCellValue("Unit");
-			header.createCell(1).setCellValue("Topic");
-			header.createCell(2).setCellValue("Subtopic");
-			header.createCell(3).setCellValue("Classification");
-			header.createCell(4).setCellValue("Descriptor");
+			addHeader(sheet);
 
-			Row first = sheet.createRow(1);
-			first.createCell(0).setCellValue("Unit 1");
-			first.createCell(1).setCellValue("Topic 1");
-			first.createCell(2).setCellValue("Subtopic 1");
-			first.createCell(3).setCellValue("1.1.1");
-			first.createCell(4).setCellValue("Descriptor one");
+			addRow(sheet, 1, "1", "Unit 1");
 
-			Row second = sheet.createRow(2);
-			second.createCell(1).setCellValue("Topic 2");
-			second.createCell(4).setCellValue("Descriptor two");
+			sheet.createRow(2);
 
-			try (OutputStream output = Files.newOutputStream(file)) {
-				workbook.write(output);
-			}
+			addRow(sheet, 3, "1.1", "Topic 1");
+			addRow(sheet, 4, "1.1.1", "Descriptor");
+
+			writeWorkbook(workbook, file);
 		}
 
-		CurriculumExcelImporter importer = new CurriculumExcelImporter();
+		List<CurriculumImportRow> rows = new CurriculumExcelImporter().read(file);
 
-		assertThrows(IllegalArgumentException.class, () -> importer.read(file));
+		assertEquals(3, rows.size());
 	}
 
 	@Test
-	void ignoresHiddenSheetsAndCleansImportedText() throws IOException {
-		Path file = tempDirectory.resolve("visible-only.xlsx");
+	void ignoresHiddenSheets() throws IOException {
+
+		Path file = tempDirectory.resolve("hidden.xlsx");
 
 		try (Workbook workbook = new XSSFWorkbook()) {
+
 			Sheet hidden = workbook.createSheet("Hidden");
-			createNormalisedSheetContent(hidden, "Hidden descriptor");
+			addHeader(hidden);
+			addRow(hidden, 1, "9", "Hidden unit");
+
 			workbook.setSheetHidden(0, true);
 
-			Sheet visible = workbook.createSheet("Visible");
-			createNormalisedSheetContent(visible, "Visible\u00A0descriptor");
+			Sheet visible = workbook.createSheet("Curriculum");
+			addHeader(visible);
+			addRow(visible, 1, "1", "Visible unit");
+
 			writeWorkbook(workbook, file);
 		}
 
 		List<CurriculumImportRow> rows = new CurriculumExcelImporter().read(file);
 
 		assertEquals(1, rows.size());
-		assertEquals("Visible descriptor", rows.getFirst().descriptor());
+		assertEquals("1", rows.get(0).code());
+		assertEquals("Visible unit", rows.get(0).content());
 	}
 
 	@Test
-	void readsExplicitClassificationColumn() throws IOException {
-		Path file = tempDirectory.resolve("normalised.xlsx");
+	void preservesMathMarkupInContent() throws IOException {
+
+		Path file = tempDirectory.resolve("maths.xlsx");
+
+		String mathContent = "Use <math><msup><mi>x</mi><mn>2</mn></msup></math>";
 
 		try (Workbook workbook = new XSSFWorkbook()) {
 			Sheet sheet = workbook.createSheet("Curriculum");
 
-			Row header = sheet.createRow(0);
-			header.createCell(0).setCellValue("Unit");
-			header.createCell(1).setCellValue("Topic");
-			header.createCell(2).setCellValue("Subtopic");
-			header.createCell(3).setCellValue("Classification");
-			header.createCell(4).setCellValue("Descriptor");
+			addHeader(sheet);
 
-			Row data = sheet.createRow(1);
-			data.createCell(0).setCellValue("Unit 3");
-			data.createCell(1).setCellValue("Topic 1");
-			data.createCell(2).setCellValue("Chemical equilibrium");
-			data.createCell(3).setCellValue("3.1.1");
-			data.createCell(4).setCellValue("Descriptor");
+			addRow(sheet, 1, "4", "Further calculus");
+			addRow(sheet, 2, "4.1", "Integration techniques");
+			addRow(sheet, 3, "4.1.1", mathContent);
 
-			try (OutputStream outputStream = Files.newOutputStream(file)) {
-				workbook.write(outputStream);
-			}
+			writeWorkbook(workbook, file);
 		}
 
-		CurriculumExcelImporter importer = new CurriculumExcelImporter();
+		List<CurriculumImportRow> rows = new CurriculumExcelImporter().read(file);
 
-		List<CurriculumImportRow> rows = importer.read(file);
-
-		assertEquals(1, rows.size());
-		assertEquals("3.1.1", rows.get(0).classificationCode());
+		assertEquals(mathContent, rows.get(2).content());
 	}
 
 	@Test
-	void readsStudyChecklistAndFillsDownHierarchy() throws IOException {
+	void readsTwoColumnCurriculumWorkbook() throws IOException {
+
 		Path file = tempDirectory.resolve("curriculum.xlsx");
 
 		try (Workbook workbook = new XSSFWorkbook()) {
-			Sheet sheet = workbook.createSheet("Unit 3 and 4");
+			Sheet sheet = workbook.createSheet("Curriculum");
 
-			Row title = sheet.createRow(0);
-			title.createCell(1).setCellValue("CHEMISTRY STUDY GUIDE");
+			addHeader(sheet);
 
-			Row header = sheet.createRow(2);
-			header.createCell(1).setCellValue("Unit");
-			header.createCell(2).setCellValue("Topic");
-			header.createCell(3).setCellValue("Subtopic");
-			// Column E deliberately has no heading.
-			header.createCell(5).setCellValue("Descriptor");
+			addRow(sheet, 1, "1", "Unit 1");
+			addRow(sheet, 2, "1.1", "Topic 1");
+			addRow(sheet, 3, "1.1.1", "Descriptor one");
+			addRow(sheet, 4, "1.1.2", "Descriptor two");
 
-			Row first = sheet.createRow(3);
-			first.createCell(1).setCellValue("3. Equilibrium, Acids and Redox Reactions");
-			first.createCell(2).setCellValue("Topic 1: Chemical Equilibrium Systems");
-			first.createCell(3).setCellValue("Chemical equilibrium");
-			first.createCell(4).setCellValue("3.1.1");
-			first.createCell(5).setCellValue("First descriptor");
-
-			Row second = sheet.createRow(4);
-			second.createCell(5).setCellValue("Second descriptor");
-
-			Row third = sheet.createRow(5);
-			third.createCell(3).setCellValue("Factors that affect equilibrium");
-			third.createCell(4).setCellValue("3.1.2");
-			third.createCell(5).setCellValue("Third descriptor");
-
-			try (OutputStream outputStream = Files.newOutputStream(file)) {
-				workbook.write(outputStream);
-			}
+			writeWorkbook(workbook, file);
 		}
 
 		CurriculumExcelImporter importer = new CurriculumExcelImporter();
 
 		List<CurriculumImportRow> rows = importer.read(file);
 
-		assertEquals(3, rows.size());
+		assertEquals(4, rows.size());
 
-		assertEquals("3.1.1", rows.get(0).classificationCode());
-		assertEquals("First descriptor", rows.get(0).descriptor());
+		assertEquals("1", rows.get(0).code());
+		assertEquals("Unit 1", rows.get(0).content());
 
-		assertEquals("3.1.1", rows.get(1).classificationCode());
-		assertEquals("Chemical equilibrium", rows.get(1).subtopicName());
-		assertEquals("Second descriptor", rows.get(1).descriptor());
+		assertEquals("1.1", rows.get(1).code());
+		assertEquals("Topic 1", rows.get(1).content());
 
-		assertEquals("3.1.2", rows.get(2).classificationCode());
-		assertEquals("Factors that affect equilibrium", rows.get(2).subtopicName());
+		assertEquals("1.1.1", rows.get(2).code());
+		assertEquals("Descriptor one", rows.get(2).content());
 	}
 
 	@Test
-	void rejectsADescriptorBeforeTheHierarchyIsComplete() throws IOException {
-		Path file = tempDirectory.resolve("incomplete.xlsx");
+	void rejectsCodeDeeperThanFourLevels() throws IOException {
+
+		Path file = tempDirectory.resolve("too-deep.xlsx");
 
 		try (Workbook workbook = new XSSFWorkbook()) {
 			Sheet sheet = workbook.createSheet("Curriculum");
-			Row header = sheet.createRow(0);
-			header.createCell(0).setCellValue("Unit");
-			header.createCell(1).setCellValue("Topic");
-			header.createCell(2).setCellValue("Subtopic");
-			header.createCell(3).setCellValue("Classification");
-			header.createCell(4).setCellValue("Descriptor");
-			sheet.createRow(1).createCell(4).setCellValue("Orphan descriptor");
+
+			addHeader(sheet);
+
+			addRow(sheet, 1, "1.2.3.4.5", "Invalid curriculum level");
+
+			writeWorkbook(workbook, file);
+		}
+
+		assertThrows(IllegalArgumentException.class, () -> new CurriculumExcelImporter().read(file));
+	}
+
+	@Test
+	void rejectsDuplicateCodes() throws IOException {
+
+		Path file = tempDirectory.resolve("duplicates.xlsx");
+
+		try (Workbook workbook = new XSSFWorkbook()) {
+			Sheet sheet = workbook.createSheet("Curriculum");
+
+			addHeader(sheet);
+
+			addRow(sheet, 1, "1", "Unit 1");
+			addRow(sheet, 2, "1.1", "First topic");
+			addRow(sheet, 3, "1.1", "Duplicate topic");
+
+			writeWorkbook(workbook, file);
+		}
+
+		assertThrows(IllegalArgumentException.class, () -> new CurriculumExcelImporter().read(file));
+	}
+
+	@Test
+	void rejectsMissingCode() throws IOException {
+
+		Path file = tempDirectory.resolve("missing-code.xlsx");
+
+		try (Workbook workbook = new XSSFWorkbook()) {
+			Sheet sheet = workbook.createSheet("Curriculum");
+
+			addHeader(sheet);
+
+			addRow(sheet, 1, "", "Content without code");
+
+			writeWorkbook(workbook, file);
+		}
+
+		assertThrows(IllegalArgumentException.class, () -> new CurriculumExcelImporter().read(file));
+	}
+
+	@Test
+	void rejectsMissingContent() throws IOException {
+
+		Path file = tempDirectory.resolve("missing-content.xlsx");
+
+		try (Workbook workbook = new XSSFWorkbook()) {
+			Sheet sheet = workbook.createSheet("Curriculum");
+
+			addHeader(sheet);
+
+			addRow(sheet, 1, "1", "");
+
 			writeWorkbook(workbook, file);
 		}
 
